--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             </nav>
         </header>
 
-        <section id="avatar" class="appetizer">
+        <section id="avatar" class="developer">
             <div class="ava-img">
                 <img src="./assets/images/imageAVA.JPG" alt="" />
             </div>
             <div class="flex-row">
                 <h2>Your Full Stack Web Developer</h2>
-            </div>
-            
+            </div> 
+        </section>    
         
         <section id="about-me" class="intro">
             <div class="flex-row">
@@ -54,7 +54,19 @@
             </div>
             <div class="big-work">
                 <img src="./assets/images/image1.jpg" alt=""    />
-            </div>  
+            </div> 
+            <div class="small-work">
+                <img src="./assets/images/image2.jpg" alt="" />
+            </div> 
+            <div class="small-work">
+                <img src="./assets/images/image3.jpg" alt="" />
+            </div>
+            <div class="small-work">
+                <img src="./assets/images/image4.jpeg" alt="" />
+            </div>
+            <div class="small-work">
+                <img src="./assets/images/image5.jpg" alt="" />
+            </div>
         </section>  
 
         <section id="contact-info" class="contacts">
