--- a/index.html
+++ b/index.html
@@ -48,11 +48,66 @@
             </div>
         </section>
 
-        <section id="my-projects" class="works">
-            <h2>My Projects</h2>
-            <div class="big-work">
+        <section id="my-projects" class="section section_works">
+            <h2 class="section_works__title">My Projects</h2>
+
+            <div class="works">
+
+                <a href="google.com" class="works__item works__item_first">
+                    <div class="works__item-bg"></div>
+                    <div class="works__item-img-container">
+                        <img src="./assets/images/image1.jpg" alt="" class="works__item-img">
+                    </div>
+                    <div class="works__item-info">
+                        <strong>Surf Report</strong>
+                    </div>
+                </a>
+
+                <a href="google.com" class="works__item">
+                    <div class="works__item-bg"></div>
+                    <div class="works__item-img-container">
+                        <img src="./assets/images/image1.jpg" alt="" class="works__item-img">
+                    </div>
+                    <div class="works__item-info">
+                        <strong>Surf Report</strong>
+                    </div>
+                </a>
+
+                <a href="google.com" class="works__item">
+                    <div class="works__item-bg"></div>
+                    <div class="works__item-img-container">
+                        <img src="./assets/images/image1.jpg" alt="" class="works__item-img">
+                    </div>
+                    <div class="works__item-info">
+                        <strong>Surf Report</strong>
+                    </div>
+                </a>
+
+                <a href="google.com" class="works__item">
+                    <div class="works__item-bg"></div>
+                    <div class="works__item-img-container">
+                        <img src="./assets/images/image1.jpg" alt="" class="works__item-img">
+                    </div>
+                    <div class="works__item-info">
+                        <strong>Surf Report</strong>
+                    </div>
+                </a>
+
+                <a href="google.com" class="works__item">
+                    <div class="works__item-bg"></div>
+                    <div class="works__item-img-container">
+                        <img src="./assets/images/image1.jpg" alt="" class="works__item-img">
+                    </div>
+                    <div class="works__item-info">
+                        <strong>Surf Report</strong>
+                    </div>
+                </a>
+
+            </div>
+
+            <!-- <div class="big-work">
                 <img src="./assets/images/image1.jpg" alt=""    />
-            </div> 
+            </div>
             <div class="small-work">
                 <img src="./assets/images/image2.jpg" alt="" />
            
@@ -61,7 +116,7 @@
                 <img src="./assets/images/image4.jpeg" alt="" />
             
                 <img src="./assets/images/image5.jpg" alt="" />
-            </div>
+            </div> -->
         </section>  
 
         <section id="contact-info" class="contacts">
