working links to projects and media 575px

--- a/index.html
+++ b/index.html
@@ -63,43 +63,43 @@
                     </div>
                 </a>
 
-                <a href="google.com" class="works__item">
+                <a href="https://etasveta.github.io/run-buddy/" class="works__item">
                     <div class="works__item-bg"></div>
                     <div class="works__item-img-container">
                         <img src="./assets/images/image2.jpg" alt="" class="works__item-img">
                     </div>
                     <div class="works__item-info">
-                        <strong>Surf Report</strong>
+                        <strong>Run Buddy</strong>
                     </div>
                 </a>
 
-                <a href="google.com" class="works__item">
+                <a href="https://google.com/" class="works__item">
                     <div class="works__item-bg"></div>
                     <div class="works__item-img-container">
                         <img src="./assets/images/image3.jpg" alt="" class="works__item-img">
                     </div>
                     <div class="works__item-info">
-                        <strong>Surf Report</strong>
+                        <strong>Smth Else</strong>
                     </div>
                 </a>
 
-                <a href="google.com" class="works__item">
+                <a href="https://google.com/" class="works__item">
                     <div class="works__item-bg"></div>
                     <div class="works__item-img-container">
                         <img src="./assets/images/image4.jpeg" alt="" class="works__item-img">
                     </div>
                     <div class="works__item-info">
-                        <strong>Surf Report</strong>
+                        <strong>Smth Cool</strong>
                     </div>
                 </a>
 
-                <a href="google.com" class="works__item">
+                <a href="https://google.com/" class="works__item">
                     <div class="works__item-bg"></div>
                     <div class="works__item-img-container">
                         <img src="./assets/images/image5.jpg" alt="" class="works__item-img">
                     </div>
                     <div class="works__item-info">
-                        <strong>Surf Report</strong>
+                        <strong>Project</strong>
                     </div>
                 </a>
 
