adding group project to portfolio

--- a/index.html
+++ b/index.html
@@ -51,18 +51,20 @@
         <section id="my-projects" class="section section_works">
             <h2 class="section_works__title">My Projects</h2>
 
-            <div class="works">
+            <div class="large-works">
 
                 <a href="https://google.com/" class="works__item works__item_first">
                     <div class="works__item-bg"></div>
                     <div class="works__item-img-container">
-                        <img src="./assets/images/image1.jpg" alt="" class="works__item-img">
+                        <img src="./assets/images/image1.jpg" alt="" class="works__item-img-1">
                     </div>
-                    <div class="works__item-info">
+                    <div class="works__item-info-1">
                         <strong>Robo-Park</strong>
                     </div>
                 </a>
-
+            </div>  
+            
+            <div class="works">
                 <a href="https://etasveta.github.io/run-buddy/" class="works__item">
                     <div class="works__item-bg"></div>
                     <div class="works__item-img-container">
@@ -73,13 +75,13 @@
                     </div>
                 </a>
 
-                <a href="https://google.com/" class="works__item">
+                <a href="https://etasveta.github.io/weather-dashboard/" class="works__item">
                     <div class="works__item-bg"></div>
                     <div class="works__item-img-container">
-                        <img src="./assets/images/image3.jpg" alt="" class="works__item-img">
+                        <img src="./assets/images/readme 1.png" alt="" class="works__item-img">
                     </div>
                     <div class="works__item-info">
-                        <strong>Smth Else</strong>
+                        <strong>Weather</strong>
                     </div>
                 </a>
 
