adding weather chanel and group project to oprtfolio

--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
                     </div>
                 </a>
 
-                <a href="https://etasveta.github.io/weather-dashboard/" class="works__item">
+                <a href="https://alg22573.github.io/adopt-a-cat/" class="works__item">
                     <div class="works__item-bg"></div>
                     <div class="works__item-img-container">
                         <img src="./assets/images/readme 1.png" alt="" class="works__item-img">
                     </div>
                     <div class="works__item-info">
-                        <strong>Weather</strong>
+                        <strong>Adopt A Cat</strong>
                     </div>
                 </a>
 
-                <a href="https://google.com/" class="works__item">
+                <a href="https://etasveta.github.io/weather-dashboard/" class="works__item">
                     <div class="works__item-bg"></div>
                     <div class="works__item-img-container">
-                        <img src="./assets/images/image4.jpeg" alt="" class="works__item-img">
+                        <img src="./assets/images/weather.png" alt="" class="works__item-img">
                     </div>
                     <div class="works__item-info">
-                        <strong>Smth Cool</strong>
+                        <strong>Weather</strong>
                     </div>
                 </a>
 
