--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 
             <div class="large-works">
 
-                <a href="https://google.com/" class="works__item works__item_first">
+                <a href="https://hidden-shelf-86183.herokuapp.com/" class="works__item works__item_first">
                     <div class="works__item-bg"></div>
                     <div class="works__item-img-container">
-                        <img src="./assets/images/image1.jpg" alt="" class="works__item-img-1">
+                        <img src="./assets/images/cat-shack.png" alt="" class="works__item-img-1">
                     </div>
                     <div class="works__item-info-1">
-                        <strong>Robo-Park</strong>
+                        <strong>Cat-Shack</strong>
                     </div>
                 </a>
             </div>  
